--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 env
-.env
+# .env
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -123,7 +123,7 @@ celerybeat.pid
 
 # Environments
 env
-.env
+# .env
 .venv
 env/
 venv/
